updated the report css and fixed the first click not showing gif problem

--- a/app/assets/stylesheets/reports.scss
+++ b/app/assets/stylesheets/reports.scss
@@ -35,3 +35,10 @@
     border-top-color: #9ccc65;
   }
 }
+
+#gif {
+  display: none;
+  top: 30;
+  left: 50%;
+  position: absolute;
+}
